# rust-presentation-web-server

./: .gitignore  Cargo.toml
01_bare_server_skeleton/: Cargo.toml
01_bare_server_skeleton/src/: main.rs
02_bare_server/: Cargo.toml
02_bare_server/src/: main.rs  todos.rs
03_persisted_server_skeleton/: Cargo.toml
03_persisted_server_skeleton/src/: main.rs  todos.rs
04_persisted_server/: Cargo.toml
04_persisted_server/src/: db.rs  errors.rs  main.rs  middlewares.rs  payloads.rs
