[workspace]
resolver = "2"
members = ["01_bare_server_skeleton", "02_bare_server", "03_persisted_server_skeleton", "04_persisted_server"]

[workspace.package]
rust-version = "1.75.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.71"
axum = "0.7.3"
axum-extra = "0.9.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "sqlite", "uuid" ] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.6.1", features = ["v4"] }
